--- a/package.json
+++ b/package.json
@@ -7,20 +7,38 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint ./**/*.{tsx,ts}",
+    "lint:fix": "eslint --fix ./**/*.{tsx,ts}"
   },
   "dependencies": {
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "native-base": "^3.4.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb-typescript": "^16.1.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jest": "^26.1.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "jest": "^28.1.0",
+    "jest-expo": "^45.0.1",
+    "prettier": "^2.6.2",
     "typescript": "~4.3.5"
   },
   "private": true
